--- a/csce242/index.html
+++ b/csce242/index.html
@@ -121,6 +121,21 @@
             were created using loops.
           </p>
         </section>
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/assignments/assignment08"
+              >Assignment 8 - JavaScript: Arrays
+            </a>
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/assignments/assignment08"
+            ><img src="images/assignment08.png" alt="Assignment 8"
+          /></a>
+          <p>
+            Eight assignment in which we used learned Arrays/Maps to create a
+            key value pair object and had it hold a key and an image for a
+            interactice webpage
+          </p>
+        </section>
       </div>
       <h2 id="assignment-header">Portfolio Project</h2>
       <div class="flex-container">
