--- a/csce242/index.html
+++ b/csce242/index.html
@@ -136,6 +136,21 @@
             interactice webpage
           </p>
         </section>
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/assignments/assignment09"
+              >Assignment 9 - Classes
+            </a>
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/assignments/assignment09"
+            ><img src="images/assignment09.png" alt="Assignment 9"
+          /></a>
+          <p>
+            Ninth Assignment in which we were introduced to the basics of JS
+            classes and how to interact with them and the DOM. Also learned how
+            to create a working modal.
+          </p>
+        </section>
       </div>
       <h2 id="assignment-header">Portfolio Project</h2>
       <div class="flex-container">
