updated pfp for project

--- a/csce242/projects/part4/about.html
+++ b/csce242/projects/part4/about.html
@@ -44,7 +44,7 @@
     <main id="main-content">
       <div id="flex-box">
         <section class="flex-section">
-          <img src="images/profile.jpg" id="profile-img" />
+          <img src="images/profile.jpeg" id="profile-img" />
           <p class="jd-info">Name: Jackson Dawson</p>
           <p class="jd-info">Major: Computer Infromation Systems</p>
           <p class="jd-info">Anticipated Graduation: May 2026</p>
