updated project part 5

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -217,6 +217,21 @@
             part 3. Also added a blog page to meet project requirements.
           </p>
         </section>
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/projects/part5/index.html"
+              >Part 5 - Improve Your Website</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/projects/part5/index.html"
+            ><img src="images/ProjectPart5.png" alt="Project Part 5"
+          /></a>
+          <p>
+            Part five - switched out an image and tweaked a background color
+            thought process. Ultimately didnt change much from part 4, content
+            with most content.
+          </p>
+        </section>
       </div>
     </main>
     <footer id="main-footer">
