added home page part 6 updates

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -232,6 +232,21 @@
             with most content.
           </p>
         </section>
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/projects/part6/index.html"
+              >Part 6 - JSON File Parsing</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/projects/part6/index.html"
+            ><img src="images/ProjectPart6.png" alt="Project Part 6"
+          /></a>
+          <p>
+            Part six - changed hard-coded infromation on the projects page into
+            an JSON file and parsed it into the proper HTML elements utlizing JS
+            and fetch libraries.
+          </p>
+        </section>
       </div>
     </main>
     <footer id="main-footer">
