--- a/csce242/index.html
+++ b/csce242/index.html
@@ -152,6 +152,28 @@
           </p>
         </section>
       </div>
+      <div class="flex-container">
+        <section class="assignments">
+          <h3>
+            <a href="https://hello-world-server-side-pyvb.onrender.com"
+              >Assignment 10 - Server Side Hello World
+            </a>
+          </h3>
+          <a href="https://hello-world-server-side-pyvb.onrender.com"
+            ><img src="images/assignment10.png" alt="Assignment10"
+          /></a>
+          <a href="https://github.com/jwdaw/hello_world_server_side"
+            >Code Repo</a
+          >
+          <a href="https://hello-world-server-side-pyvb.onrender.com"
+            >Live Demo</a
+          >
+          <p>
+            Tenth Assignment in which we set up a basic implementation of server
+            side code to create a web app to hold the text "Hello World"
+          </p>
+        </section>
+      </div>
       <h2 id="assignment-header">Portfolio Project</h2>
       <div class="flex-container">
         <section class="assignments">
