--- a/csce242/index.html
+++ b/csce242/index.html
@@ -270,6 +270,29 @@
           </p>
         </section>
       </div>
+      <div class="flex-container">
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/projects/part7/index.html"
+              >Part 7 - Contact Form and JavaScript</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/projects/part7/index.html"
+            ><img src="images/ProjectPart7.png" alt="Project Part 7"
+          /></a>
+          <a href="https://jwdaw.github.io/csce242/projects/part7/contact.html"
+            >Contact Form</a
+          >
+          <a href="https://jwdaw.github.io/csce242/projects/part7/blog.html"
+            >iFrame Page</a
+          >
+          <p>
+            Part seven of my project in which we created a contact form that
+            sends an email to my personal email with the forms information. I
+            also learned to add an Iframe for my blog.
+          </p>
+        </section>
+      </div>
     </main>
     <footer id="main-footer">
       <p><strong>&copy; Jackson Dawson 2025</strong></p>
