--- a/csce242/index.html
+++ b/csce242/index.html
@@ -292,6 +292,22 @@
             also learned to add an Iframe for my blog.
           </p>
         </section>
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/jwd-portfolio"
+              >Part 8 - React Site Components and Pages</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/jwd-portfolio"
+            ><img src="images/ProjectPart8.png" alt="Project Part 8"
+          /></a>
+          <a href="https://www.github.com/jwdaw/jwd-portfolio">Github</a>
+          <p>
+            Part Eight of my project in which we recreated our entire static
+            HTML/CSS/JavaScript page into a static React application deployed on
+            github pages.
+          </p>
+        </section>
       </div>
     </main>
     <footer id="main-footer">
