--- a/csce242/index.html
+++ b/csce242/index.html
@@ -308,6 +308,33 @@
             github pages.
           </p>
         </section>
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/jwd-portfolio"
+              >Part 9 - More JS and Server Get Request</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/jwd-portfolio"
+            ><img src="images/ProjectPart9.png" alt="Project Part 8"
+          /></a>
+          <a href="https://www.github.com/jwdaw/portfolio-server"
+            >Github: Server Side Code</a
+          >
+          <a href="https://www.github.com/jwdaw/jwd-portfolio"
+            >Github: Client Side Code</a
+          >
+          <a href="https://portfolio-server-3k7u.onrender.com"
+            >Render: Server Side</a
+          >
+          <a href="https://jwdaw.github.io/jwd-portfolio"
+            >Client Side Website</a
+          >
+          <p>
+            Part Nine of my project in which we added server side code for
+            pulling JSON data into the react project components page. Also added
+            functionality for contact form.
+          </p>
+        </section>
       </div>
     </main>
     <footer id="main-footer">
