--- a/csce242/index.html
+++ b/csce242/index.html
@@ -315,7 +315,7 @@
             >
           </h3>
           <a href="https://jwdaw.github.io/jwd-portfolio"
-            ><img src="images/ProjectPart9.png" alt="Project Part 8"
+            ><img src="images/ProjectPart9.png" alt="Project Part 9"
           /></a>
           <a href="https://www.github.com/jwdaw/portfolio-server"
             >Github: Server Side Code</a
@@ -333,6 +333,35 @@
             Part Nine of my project in which we added server side code for
             pulling JSON data into the react project components page. Also added
             functionality for contact form.
+          </p>
+        </section>
+      </div>
+      <div class="flex-container">
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/jwd-portfolio"
+              >Part 10 - Post Request</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/jwd-portfolio"
+            ><img src="images/ProjectPart10.png" alt="Project Part 10"
+          /></a>
+          <a href="https://www.github.com/jwdaw/portfolio-server"
+            >Github: Server Side Code</a
+          >
+          <a href="https://www.github.com/jwdaw/jwd-portfolio"
+            >Github: Client Side Code</a
+          >
+          <a href="https://portfolio-server-3k7u.onrender.com"
+            >Render: Server Side</a
+          >
+          <a href="https://jwdaw.github.io/jwd-portfolio"
+            >Client Side Website</a
+          >
+          <p>
+            Part Ten of my project where we implemented a POST feature where I
+            added functionality for adding a project to the projects section of
+            my portfolio
           </p>
         </section>
       </div>
