--- a/csce242/index.html
+++ b/csce242/index.html
@@ -364,6 +364,33 @@
             my portfolio
           </p>
         </section>
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/jwd-portfolio"
+              >Part 11 - Edit and Delete Requests</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/jwd-portfolio"
+            ><img src="images/ProjectPart11.png" alt="Project Part 11"
+          /></a>
+          <a href="https://www.github.com/jwdaw/portfolio-server"
+            >Github: Server Side Code</a
+          >
+          <a href="https://www.github.com/jwdaw/jwd-portfolio"
+            >Github: Client Side Code</a
+          >
+          <a href="https://portfolio-server-3k7u.onrender.com"
+            >Render: Server Side</a
+          >
+          <a href="https://jwdaw.github.io/jwd-portfolio"
+            >Client Side Website</a
+          >
+          <p>
+            Part Eleven of my project was adding functionality to edit and
+            delete both already existing projects and newly added projects. This
+            was done with PUT and DELETE.
+          </p>
+        </section>
       </div>
     </main>
     <footer id="main-footer">
